@@ -3,14 +3,14 @@ MD5 2783ba972bec821c6298021dbd1ca62d files/51boxquote-gentoo.el 111
 RMD160 34985824748ce2164e82a2d04e655354b5818460 files/51boxquote-gentoo.el 111
 SHA256 e02f9f0195c460dacfddb646b6b3035c3891023282031a812f30bf952fdab900 files/51boxquote-gentoo.el 111
 DIST boxquote-1.18.tar.gz 5171 RMD160 8770ff1f45517aba10e65628347bf7b68f986b12 SHA1 d6f0cef6385ca6a1b9ebf86c41a15f60444b2e7b SHA256 172feffd6eb459fd18cfb43d8c3945aea9ec2eaf8319368c7dd3648f7e2945d9
-EBUILD boxquote-1.18-r1.ebuild 487 RMD160 a0958e6bb104f5d3d63cdd6147b34e5f319a7542 SHA1 b63111056cfc8739d9bdcc18083c16ea70711c71 SHA256 d7731624f1fbd33ff75f92111aadcf6779fa899ff606ef588f3350e92d275d39
-MD5 e6cba11ab82c645dd6fb246d5935b200 boxquote-1.18-r1.ebuild 487
-RMD160 a0958e6bb104f5d3d63cdd6147b34e5f319a7542 boxquote-1.18-r1.ebuild 487
-SHA256 d7731624f1fbd33ff75f92111aadcf6779fa899ff606ef588f3350e92d275d39 boxquote-1.18-r1.ebuild 487
-MISC ChangeLog 592 RMD160 78032bb31db7bcb10846afd47c065dbe04c145ab SHA1 8e131e43edc0d976d35a3b62b065b7222c12c6a8 SHA256 fb5246ef383104e0618e2025d4fe50ed7ae1922f87bd34cf488ff25c0a675326
-MD5 5e6bd993cce8befe8b0a4f38ff9aa29b ChangeLog 592
-RMD160 78032bb31db7bcb10846afd47c065dbe04c145ab ChangeLog 592
-SHA256 fb5246ef383104e0618e2025d4fe50ed7ae1922f87bd34cf488ff25c0a675326 ChangeLog 592
+EBUILD boxquote-1.18-r1.ebuild 487 RMD160 d7381ad42e32fc5f193ef00cfae9c758683e6223 SHA1 091a6332dbc5b1d479ba6ad6b23b1c5e46021b78 SHA256 9aa6f53a0a059284f8350a8709840b835d7b6f7ef087707dc632c63d7fb8bc0e
+MD5 78bf363a29f5122d9543b2fb99433137 boxquote-1.18-r1.ebuild 487
+RMD160 d7381ad42e32fc5f193ef00cfae9c758683e6223 boxquote-1.18-r1.ebuild 487
+SHA256 9aa6f53a0a059284f8350a8709840b835d7b6f7ef087707dc632c63d7fb8bc0e boxquote-1.18-r1.ebuild 487
+MISC ChangeLog 708 RMD160 2d58daabfeabfd77db01c35198e3be5c3070c396 SHA1 9e781a566d22048a16970e88194d6293f6c6f792 SHA256 a7b876a163db493c73f58375b00cee48fa1f0310e13323cd67a0582b6a79282d
+MD5 f9d04c654009cdf5fc9c85b27bb721a7 ChangeLog 708
+RMD160 2d58daabfeabfd77db01c35198e3be5c3070c396 ChangeLog 708
+SHA256 a7b876a163db493c73f58375b00cee48fa1f0310e13323cd67a0582b6a79282d ChangeLog 708
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
