@@ -3,14 +3,14 @@ MD5 ad11fc7a43d066fab9a2c8db540f25a9 files/51table-gentoo.el 149
 RMD160 afbbf8504d65ffd40c07a22eeb9659c145c522e4 files/51table-gentoo.el 149
 SHA256 aea55468c74766b51d6a9bc637977bf4217d05ad4bf27f9d496061f9046c5b80 files/51table-gentoo.el 149
 DIST table-1.5.54.el.gz 58136 RMD160 da7312476e92bc298fc997f7940910a924507f8c SHA1 4c5545ecda7da7e9572733f90e6d92551b62223e SHA256 af7f3337e1dc517bcb9f5683103d5e32a34dcf311f1187a02660fc3642089cba
-EBUILD table-1.5.54-r1.ebuild 510 RMD160 89f7f706999b4da7cb9c97bb9ca931418c61cb51 SHA1 e3acad9191f78ae5a492fa0f8167693f9bc570e9 SHA256 6d44920de155a5db2377418f743aead0c433b93b3f15198ed753b6cfe3970abe
-MD5 db065f3a43261ccf125e524eb189663a table-1.5.54-r1.ebuild 510
-RMD160 89f7f706999b4da7cb9c97bb9ca931418c61cb51 table-1.5.54-r1.ebuild 510
-SHA256 6d44920de155a5db2377418f743aead0c433b93b3f15198ed753b6cfe3970abe table-1.5.54-r1.ebuild 510
-MISC ChangeLog 463 RMD160 63aee81f86bfd8474489544bac06cd8e7651a72d SHA1 b1eb20b1c0a11adbafa82e4240da9df744385be3 SHA256 226ffca285b5c3f1777d9c2253b1aa1b52d464661236311dd53d98f3c9752aeb
-MD5 e1d235b085ff26740c412ede426c7a99 ChangeLog 463
-RMD160 63aee81f86bfd8474489544bac06cd8e7651a72d ChangeLog 463
-SHA256 226ffca285b5c3f1777d9c2253b1aa1b52d464661236311dd53d98f3c9752aeb ChangeLog 463
+EBUILD table-1.5.54-r1.ebuild 510 RMD160 c2b20bf947cecae52dc863e959018d1c770552fe SHA1 3334fdb07ab1d50166df79e16ca4cbf7903ead21 SHA256 0f7fd9e7c96f9b1d72e0a026bfa708771a7370a646c2185101b17dc23fcee318
+MD5 99f955c7edc933bb628818a9cb72339e table-1.5.54-r1.ebuild 510
+RMD160 c2b20bf947cecae52dc863e959018d1c770552fe table-1.5.54-r1.ebuild 510
+SHA256 0f7fd9e7c96f9b1d72e0a026bfa708771a7370a646c2185101b17dc23fcee318 table-1.5.54-r1.ebuild 510
+MISC ChangeLog 576 RMD160 3c5c1c6688c792fe594ace6bc74f56a0e5f17a76 SHA1 1152d4d8f05a76aae9dd9d5b44da3b37e0bf5cd1 SHA256 e6118d665821f7608f2b39085b1c2871595a690ac82b528435b68cc76f5d4838
+MD5 9d56ec2db9fd805fa574370b39d5ef27 ChangeLog 576
+RMD160 3c5c1c6688c792fe594ace6bc74f56a0e5f17a76 ChangeLog 576
+SHA256 e6118d665821f7608f2b39085b1c2871595a690ac82b528435b68cc76f5d4838 ChangeLog 576
 MISC metadata.xml 439 RMD160 e78a27125711230ef5fd0ccd2cca0ca6939b90b6 SHA1 081827086b7fcda20ad34263e3a623e041acdfab SHA256 c10551fca3a6736b2d5d755bb82998c73a62236be309c5fa4a76bb03111a820e
 MD5 1e850ac6a0bf83b9afd876b1eb82e0b3 metadata.xml 439
 RMD160 e78a27125711230ef5fd0ccd2cca0ca6939b90b6 metadata.xml 439
